[project]
name = "h2fit"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kaiss",email = "mateus.kaiss@ufpr.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
