[project]
name = "h2fit"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kaiss",email = "mateus.kaiss@ufpr.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
format = "blue . && isort ."
test = "pytest -s -x --cov=h2fit -vv"
post_test = "coverage html"

